remove embedded LDAP configs